tests/NormalTests/paczka1/small_fuzzy/88770643.err
Error in line 7: ta6KHrk S357 43,4
Error in line 9: ta6KHrk A363 57,5
